syntax = "proto3";

package user_service;

option go_package = "protos/user_service";

service UserService {

    rpc GetUserById(UserPrimaryKey) returns (User) {}; 
    rpc GetSum(Variable) returns (Var) {};
    rpc GetMax(Array) returns (Arr) {};
    rpc GetDiv(Variable) returns(Var) {};
    rpc GetMult(Variable) returns(Var) {};
    rpc GetSub(Variable) returns(Var) {};
    rpc GetSqrt(Sqrt) returns(Var2) {};
    rpc GetPow(Variable) returns(Var) {};
    rpc GetMin(Array) returns(Arr){};
}

message Var2{
    float var2 =1;
}
message Sqrt {
    float var =1;
}
message Array {
    repeated int32 nums=1;
}

message Arr {
    int32 num = 1;
}

message Variable {
    int32 a=1;
    int32 b=2; 
}

message Var{
    int32 c =1;

}

message UserPrimaryKey{
    int32 id =1;
}

message User {
    int32 id =1;
    string full_name =2;
    int32 age=3;
}